--- a/groupassigfts.html
+++ b/groupassigfts.html
@@ -487,32 +487,6 @@ Series 7
 <tbody>
 <tr>
 <td style="text-align:left;">
-NA
-</td>
-<td style="text-align:left;">
-NA
-</td>
-<td style="text-align:left;">
-NA
-</td>
-<td style="text-align:left;">
-NA
-</td>
-<td style="text-align:left;">
-NA
-</td>
-<td style="text-align:left;">
-NA
-</td>
-<td style="text-align:left;">
-NA
-</td>
-<td style="text-align:left;">
-NA
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
 Stationary
 </td>
 <td style="text-align:left;">
@@ -1337,7 +1311,7 @@ p-value &lt; 2.2e-16
 ##  Jarque-Bera test for normality
 ## 
 ## data:  y
-## JB = 18.193, p-value = 0.002</code></pre>
+## JB = 18.193, p-value = 0.001</code></pre>
 <p>Both formal tests follow the same hypothesis structure:</p>
 <p><em>Ho: the data is normally distributed</em> <em>H1: the data is not normally distributed</em></p>
 <p>While both formal tests preconised that we should reject Ho at a 95% confidence level (p.values of roughly 0.02 and 0.003 respectively), we deemed the results excessively rigid for this particular case and decided to stick with the eye test. Therefore, by infering this series joint distribution is marginally distributed, we concluded it is not only a WN but also Gaussian White Noise (GWN) and subsquently Strict White Noise (SWN) process since an uncorrelated variable whose multivariate joint distribution is Normal is forcefully indepedent and identically distributed(i.i.d). Given our latest findings, we can also infer that no non-linear model would be of help in future forecasting endeavours.</p>
@@ -1381,7 +1355,7 @@ p-value &lt; 2.2e-16
 ##  Jarque-Bera test for normality
 ## 
 ## data:  y
-## JB = 18.817, p-value = 0.006</code></pre>
+## JB = 18.817, p-value = 0.003</code></pre>
 <p>Both formal tests follow the same hypothesis structure:</p>
 <p><em>Ho: the data is normally distributed</em> <em>H1: the data is not normally distributed</em></p>
 <p>Both Jarque-Bera and Shapiro tests reported very small p-values, indicating we should reject the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team’s eye test.</p>
@@ -1423,7 +1397,7 @@ p-value &lt; 2.2e-16
 ##  Jarque-Bera test for normality
 ## 
 ## data:  y
-## JB = 1.1021, p-value = 0.549</code></pre>
+## JB = 1.1021, p-value = 0.5415</code></pre>
 <p>Both formal tests follow the same hypothesis structure:</p>
 <p><em>Ho: the data is normally distributed</em> <em>H1: the data is not normally distributed</em></p>
 <p>Both Jarque-Bera (p-value 0.55) and Shapiro tests (p-value 0.69) indicate we should accept the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team’s eye test. As per consequence, by infering this series joint distribution is marginally distributed, we concluded it is not only a WN but also Gaussian White Noise (GWN) and subsquently Strict White Noise (SWN) process since an uncorrelated variable whose multivariate joint distribution is Normal is forcefully i.i.d. Given our latest findings, we can also infer that no non-linear model would be of help in future forecasting endeavours.</p>
@@ -1467,7 +1441,7 @@ p-value &lt; 2.2e-16
 ##  Jarque-Bera test for normality
 ## 
 ## data:  y
-## JB = 13.938, p-value = 0.0075</code></pre>
+## JB = 13.938, p-value = 0.006</code></pre>
 <p>Both formal tests follow the same hypothesis structure:</p>
 <p><em>Ho: the data is normally distributed</em> <em>H1: the data is not normally distributed</em></p>
 <p>Both Jarque-Bera and Shapiro tests reported very small p-values, indicating we should reject the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team’s eye test.</p>
@@ -1509,7 +1483,7 @@ p-value &lt; 2.2e-16
 ##  Jarque-Bera test for normality
 ## 
 ## data:  y
-## JB = 2.8694, p-value = 0.2065</code></pre>
+## JB = 2.8694, p-value = 0.1985</code></pre>
 <p>Both formal tests follow the same hypothesis structure:</p>
 <p><em>Ho: the data is normally distributed</em> <em>H1: the data is not normally distributed</em></p>
 <p>Both Jarque-Bera (p-value 0.20) and Shapiro tests (p-value 0.22) indicate we should accept the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team’s eye test. As per consequence, this series joint distribution is normally distributed.</p>
@@ -1553,7 +1527,7 @@ p-value &lt; 2.2e-16
 ##  Jarque-Bera test for normality
 ## 
 ## data:  y
-## JB = 26.665, p-value = 0.001</code></pre>
+## JB = 26.665, p-value = 5e-04</code></pre>
 <p>Both formal tests follow the same hypothesis structure:</p>
 <p><em>Ho: the data is normally distributed</em> <em>H1: the data is not normally distributed</em></p>
 <p>Both Jarque-Bera and Shapiro tests reported extremely small p-values, indicating we should reject the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team’s eye test.</p>
@@ -1595,7 +1569,7 @@ p-value &lt; 2.2e-16
 ##  Jarque-Bera test for normality
 ## 
 ## data:  z
-## JB = 1.4325, p-value = 0.459</code></pre>
+## JB = 1.4325, p-value = 0.4535</code></pre>
 <p>Both formal tests follow the same hypothesis structure:</p>
 <p><em>Ho: the data is normally distributed</em> <em>H1: the data is not normally distributed</em></p>
 <p>Both Jarque-Bera (p-value 0.4775) and Shapiro tests (p-value 0.3416) indicate we should accept the null hypothesis at a 95% confidence level. Therefore, we were able to validate the conclusions based on the team’s eye test. As per consequence,this series is marginally distributed.</p>
